<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="240dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/logger_image"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/loggingicon"
            android:layout_marginStart="12dp" />
        <TextView
            android:id="@+id/logger_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="14dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Logger"
            android:textSize="21sp"
            android:textColor="#283747"
            android:textStyle="bold" />
</LinearLayout>

        <TextView
            android:id="@+id/readerlogger_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#283747"
            android:textStyle="bold"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:text="@string/reader" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="14dp"
    android:weightSum="4">
        <RelativeLayout
            android:id="@+id/realtimelogs_relative_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/realtimelogger_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:text="@string/Realtime"
                android:textSize="16sp"
                android:textColor="#283747" />
            <Switch
                android:id="@+id/realtimelogger_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/realtimelogger_textview"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ngeerror_relative_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1">

                <TextView
                    android:id="@+id/ngeerror_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/NGEErrorlogs"
                    android:textSize="16sp"
                    android:layout_centerInParent="true"
                    android:layout_alignParentStart="true"
                    android:textColor="#283747"
                    />
                <CheckBox
                    android:id="@+id/ngeerror_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"

                    />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ngeeventlog_relative_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1">
            <TextView
                    android:id="@+id/ngeeventlog_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/NGEEventlogs"
                    android:textSize="16sp"
                    android:layout_centerInParent="true"
                    android:layout_alignParentStart="true"
                    android:textColor="#283747"
                    />
                <CheckBox
                    android:id="@+id/ngeeventlog_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ngepacketlogging_relative_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            >

                <TextView
                    android:id="@+id/ngepacketlogging_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/NGEPacketlogs"
                    android:layout_centerInParent="true"
                    android:layout_alignParentStart="true"
                    android:textSize="16sp"
                    android:textColor="#283747"
                    />
                <CheckBox
                    android:id="@+id/ngepacketlogging_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    />
        </RelativeLayout>
</LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:weightSum="2"
            android:id="@+id/logbuttons">
            <Button
                android:id="@+id/ramlogbutton"
                android:text="@string/InternalRamLogs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textSize="13sp"/>


            <Button
                android:id="@+id/flashlogbutton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/InternalFlashLogs"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="13sp"
                />

        </LinearLayout>


        <TextView
            android:id="@+id/applicationlogger_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:text="@string/ApplicationLogger"
            android:textColor="#283747"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/readerrelative_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/enablelogger_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/Enable"
                android:textSize="16sp"
                android:layout_marginStart="14dp"
                android:textColor="#283747"
                />

            <Switch
                android:id="@+id/enablelogger_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/enablelogger_textview"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </RelativeLayout>

        <TextView
            android:id="@+id/exportlog_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Export_Logs"
            android:textSize="18sp"
            android:textColor="#283747"
            android:textStyle="bold"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/exportlog_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#283747"
            android:inputType="textPersonName"
            android:text="/sdcard/RfidLog.txt"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/export_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/export"
            android:textSize="15sp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:background="#17A589"
            android:layout_margin="14dp"
            android:visibility="gone" />



        <EditText
            android:id="@+id/logcats_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

</ScrollView>